启用了配置文件初始化。